data/apps/argocd/cloudbeaver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "cloudbeaver.xxx.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cloudbeaver
          port: 8978
